Added about us and support age and updated the readme file with build commands.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <title>Home</title>
 </head>
 <body>
-<h1>Home!</h1>
-<p> Click <a th:href="@{/welcome}">here</a> to see a welcome page.</p>
-<p> Click <a th:href="@{/admin}">here</a> to see a admin page.</p>
+<h1>Home Page</h1>
+Spring Security Example
+<p> Click <a th:href="@{/welcome}">here</a> to visit welcome page.</p>
+<p> Click <a th:href="@{/admin}">here</a> to visit admin page.</p>
+<p> Click <a th:href="@{/support}">here</a> to visit support page.</p>
+<p> Click <a th:href="@{/about}">here</a> to visit about page.</p>
 </body>
 </html>
+
+
+
+
+
